fixed spacing issuse in the about area, also removed contact form will add back in once working. and smothed out the info box in the portfolio section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,6 @@ body{
     background-size: contain;
     background-position: center 0;
     border: 2px rgba(54, 43, 43, 0.513) solid;
-    width: 100%;
     color: rgb(0, 0, 0);
     font-family: 'Noto Sans KR', sans-serif;
     /* text-shadow: 2px 2px rgb(0, 0, 0); */
@@ -179,6 +178,8 @@ h2{
     /* background-color: rgba(0, 0, 0, 0.349); */
     border: 2px rgba(54, 43, 43, 0.513) solid;
     justify-content: center;
+    margin: 0 auto;
+    width: auto;
 }
 
 #shark-box{
@@ -222,6 +223,7 @@ p{
     flex-direction: row;
     justify-content: flex-start;
 }
+
 
 /* end about me style*/
 
@@ -291,6 +293,13 @@ p{
     margin: 2%;
     line-height: 25px;
     /* width: 80%; */
+}
+.present-info-box{
+    /* border: 2px 0px rgba(54, 43, 43, 0.513) solid; */
+    /* margin: 10px; */
+    line-height: 25px;
+    /* width: 100%; */
+    /* align-self: center; */
 }
 
 .filler{
@@ -426,7 +435,6 @@ footer{
     flex-direction: row;
     justify-content: center;
     /* position: fixed; */
-    width: 100%;
     height: 30px;
     bottom: 0;
     padding:6px;
@@ -510,7 +518,7 @@ footer{
         font-size: 20px;
     }
     .pick-word {
-        margin: 0 auto;
+        margin: 2% auto;
         position: relative;
         text-align: center;
         font-size: 15px;
@@ -614,9 +622,15 @@ footer{
 } 
 
 @media screen and (max-width:850px) { 
+    .icon{
+        height: 60px;
+     }
     
     .page-content{
         width: 65%;
+    }
+    #open-fsd{
+        font-size: 23px;
     }
 }
 
@@ -631,8 +645,8 @@ footer{
     .nav-btn{
         border-radius: 50px 23px 50px 23px;
         /* background-color: rgba(0, 0, 0, 0.349); */
-        margin:1% 7% 1% 7%;  
-        width: 85px;
+        margin:1% 1% 1% 1%;  
+        width: 100%;
         height: 30px;
         padding-top: 15px;
         /* border: 2px rgba(54, 43, 43, 0.513) solid; */
